fixing some scripts, removing redux AGAIN sad. using useState instead, and commenting connect so we don't connect every time and break the server when it doesnt connect.

--- a/sass/base/_utilities.scss
+++ b/sass/base/_utilities.scss
@@ -100,7 +100,8 @@
 .active {
   padding-bottom: 1px;
   border-bottom: $color-white 4px solid;
-  & a {
+  & a::before {
+    height: 0px;
     transition: none !important;
   }
 }
